--- a/style.css
+++ b/style.css
@@ -148,28 +148,28 @@ header .navbar ul li a:hover{
     display: none;
 }
 
-.home{
+.welcome{
     display: flex;
     justify-content: center;
     flex-flow: column;
     padding:0 15rem;
 }
 
-.home h3{
+.welcome h3{
     font-size: 2.5rem;
     color:#fff;
 }
 
-.home h1{
+.welcome h1{
     font-size:5rem;
     color:#fff;
 }
 
-.home h1 span{
+.welcome h1 span{
     color:var(--yellow);
 }
 
-.home p{
+.welcome p{
     font-size:2rem;
     color:#eee;
     padding: 1rem 0;
@@ -380,7 +380,7 @@ header .navbar ul li a:hover{
         font-size: 55%;
     }
 
-    .home{
+    .welcome{
         padding:1rem 4rem;
     }
 
