--- a/style.css
+++ b/style.css
@@ -452,12 +452,11 @@ header .navbar ul li a:hover{
     background: #f9e424;
     bottom: 2rem;
     right: 2rem;
-
     text-decoration: none;
     text-align: center;
-    line-height: 50px;
+    line-height: 5rem;
     color: white;
-    font-size: 1.5rem;
+    font-size: 2rem;
     border-radius: 2rem;
 }
 
