added a new project

--- a/style.css
+++ b/style.css
@@ -411,6 +411,10 @@ header .navbar ul li a:hover{
     background-image: url('./images/algorithms.jpeg');
 }
 
+.car-4 {
+    background-image: url('./images/SpaceInvader.png');
+}
+
 .project-card h2{
     font-size: 1.75rem;
     text-align: center;
