--- a/style.css
+++ b/style.css
@@ -415,6 +415,15 @@ header .navbar ul li a:hover{
     background-image: url('./images/SpaceInvader.png');
 }
 
+.car-5 {
+    background-image: url('./images/livediary.jpeg.png');
+}
+
+.car-6 {
+    background-image: url('./images/pending.jpeg.png');
+}
+
+
 .project-card h2{
     font-size: 1.75rem;
     text-align: center;
