Added new project

--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ header .navbar ul li a:hover{
 }
 
 .car-6 {
-    background-image: url('./images/pending.jpeg.png');
+    background-image: url('./images/MedAssist-logo-poppins.png');
 }
 
 
